@@ -161,6 +161,8 @@ public:
   static QList<KPostit>   PostitList;     
   static QStrList         PostitFilesList; 
   static QList<AlarmEntry> AlarmList;
+  static  bool dock;
+
   /*  static ConfigDlg *configdlg =0L;
   static FontDlg* fontdlg =0L;
   static QTabDialog* tabdialog =0L;
@@ -188,6 +190,7 @@ public slots:
   void  set3DFrame();
   void  setNoFrame();
   void  toggleFrame();
+  void  toggleDock();
   void  dummy();
   void  set_colors();
   void  set_background_color();
@@ -232,6 +235,7 @@ private:
   QPopupMenu *desktops;
   KFM *kfm;
   int  frame3dID;
+  int  dockID;
   QColor forecolor;
   QColor backcolor;
 
